# WMM

./: .gitignore  CMakeLists.txt  HowToUse.md  HowToUse.ru.md  README.md  README.ru.md
.github/ISSUE_TEMPLATE/: bug_report.md
config/games/: Cyberpunk 2077.ini
config/lang/: EN.ini  RU.ini
src/: CMakeLists.txt  CONSTANTS.h  CObjectsButton.cpp  ModManager.h  cli.cpp  cli.h  core.cpp  core.h  dialogs.cpp  dialogs.h  dnd.cpp  dnd.h  hpp-archive.h  importer.h  lang.cpp  lang.h  main.cpp  methods.cpp  methods.h  patterns.cpp  patterns.h  settings.cpp  settings.h  widgetpattern.cpp  widgetpattern.h  window.cpp  window.h  wmml.cpp  wmml.h
src/ModManager/: ModList.cpp  ModManager.cpp  objects.cpp
src/api/: Core.cpp  Core.h  ModManager.cpp  ModManager.h  export.h
src/core/: IGameConfig.cpp  IGameConfig.h  InterprocessData.h  config.cpp  configurator.cpp  core.cpp  gameConfig.cpp  importer.cpp  lang.cpp
src/dialog_window/: CCortegeWindow.cpp  CCortegeWindow.h  CInpad.cpp  CInpad.h  CNewObjectDialog.cpp  CNewObjectDialog.h  CProperties.cpp  CProperties.h  unificator.cpp  unificator.h
src/dialog_window/cinpad/: CInpad.cpp  CInpad.h  CInpadButton.cpp  CInpadButton.h  CInpadList.cpp  CInpadList.h
src/hpp-archive/: hpp-archive.cpp
src/lib/libarchive/lib/: archive.lib  archive_static.lib
src/lib/libarchive/lib/pkgconfig/: libarchive.pc
src/patterns/: CBaseSmartObject.cpp  CBaseSmartObject.h  CFastDialog.cpp  CFastDialog.h  CLinkTumbler.cpp  CLinkTumbler.h  CScrollWindow.h  CSmartList.h  CSmartObject.cpp  CSmartObject.h  CSwitchButton.cpp  CSwitchButton.h  CToggledButton.cpp  CToggledButton.h  ERRORdialog.cpp  ERRORdialog.h  RenameDialog.h  RrenameDialog.cpp  WaitingWindow.h  templatelist.cpp  templatelist.h
src/plugins/: PluginInterface.h  PluginLoader.cpp  PluginLoader.h
src/settings/: CSaver.cpp  CSaver.h  ModStorage.cpp  ModStorage.h  collections.cpp  collections.h  setextensions.cpp  setextensions.h  setlang.cpp  setlang.h  setsource.cpp  setsource.h  setsupport.cpp  setsupport.h  settings.cpp  settings.h
src/settings/ModStorage/: ModStorageList.cpp  ModStorageList.h  ModStorageObject.cpp  ModStorageObject.h  ModVersionList.cpp  ModVersionList.h
src/window/: CContentList.cpp  CMenuBar.cpp  CMenuBar.h  CObjectList.cpp  CObjectsButton.cpp  CObjectsButton.h  CSearchWidget.cpp  CSearchWidget.h  CSortedFrame.cpp  CSortedFrame.h  CSubInfoFrame.cpp  CSubInfoFrame.h  mainWidgets.h
src/window/modlist/: cobject.cpp  cobject.h  cobjectscontainer.cpp  cobjectscontainer.h
src/winmodule/: methods.h  winrootbackend.cpp  winrootbackend.h  winrootmain.cpp
winRes/: resources.rc  root.rc
